added project details section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3074,6 +3074,7 @@ p {
     height: 80px;
     width: 80px;
     align-items: center;
+    position: ;
 }
 
 .section-strength-row .section-strength-img object,
